# Scanner3DClient

./: .gitignore  CMakeLists.txt  README.md  generate_vs_2019_x64_project.bat  generate_xcode_project
Source/: pch.h
Source/Scanner3DClient/: Scanner3DClient.h  main.cpp
Source/Scanner3DClient/GUI/ClientView/: ClientView.cpp  ClientView.h
Source/Scanner3DClient/GUI/ClientView/UI/: ClientView.ui
Source/Scanner3DClient/GUI/ConnectDialog/: ConnectDialog.cpp  ConnectDialog.h
Source/Scanner3DClient/GUI/ConnectDialog/UI/: ConnectDialog.ui
Source/Scanner3DClient/GUI/MainWindow/: MainWindow.cpp  MainWindow.h
Source/Scanner3DClient/GUI/MainWindow/UI/: MainWindow.ui
Source/Scanner3DClient/GUI/ScanningResultWidget/: ScanningResultWidget.cpp  ScanningResultWidget.h
Source/Scanner3DClient/GUI/ServicesView/: ServicesView.cpp  ServicesView.h
Source/Scanner3DClient/GUI/ServicesView/UI/: ServicesView.ui
Source/Scanner3DClient/GUI/SettingsDialog/: SettingsDialog.cpp  SettingsDialog.h
Source/Scanner3DClient/GUI/SettingsDialog/UI/: SettingsDialog.ui
Source/Scanner3DClient/GUI/Views/: ClientView.cpp
Source/Scanner3DClient/MainWindow/: MainWindow.cpp  MainWindow.h
Source/Scanner3DClient/Scanning/: ScanningProcess.cpp  ScanningProcess.h
Source/Scanner3DClient/Services/: ClientServicesBuilder.cpp  ClientServicesBuilder.h
Source/Scanner3DClient/Services/Camera/: CameraService.cpp  CameraService.h
Source/Scanner3DClient/Services/Config/: ConfigService.cpp  ConfigService.h
Source/Scanner3DClient/Services/Echo/: EchoService.cpp  EchoService.h
Source/Scanner3DClient/Services/Scanner/: ScannerService.cpp  ScannerService.h
Source/Scanner3DClient/Services/Tray/: TrayService.cpp  TrayService.h
